--- a/Madspild/src/main/resources/templates/index.html
+++ b/Madspild/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>W3.CSS Template</title>
+<title>Mad spild</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -8,106 +8,157 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-    html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
+    html, body, h1, h2, h3, h4, h5, h6 {
+        font-family: "Roboto", sans-serif;
+    }
+
     .w3-sidebar {
         z-index: 3;
         width: 250px;
-        top: 43px;
+        top: 0px;
         bottom: 0;
         height: inherit;
     }
 </style>
 <body>
-
-<!-- Navbar -->
-<div class="w3-top">
-    <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
-        <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
-        <a href="#" class="w3-bar-item w3-button w3-theme-l1">Logo</a>
-        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
-        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Values</a>
-        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">News</a>
-        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
-        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hide-medium w3-hover-white">Clients</a>
-        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hide-medium w3-hover-white">Partners</a>
-    </div>
-</div>
+<!--&lt;!&ndash; Navbar &ndash;&gt;-->
+<!--<div class="w3-top">-->
+<!--    <div class="w3-bar w3-theme w3-top w3-left-align w3-large">-->
+<!--        <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>-->
+<!--        <a href="#" class="w3-bar-item w3-button w3-theme-l1">Logo</a>-->
+<!--        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>-->
+<!--        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Values</a>-->
+<!--        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">News</a>-->
+<!--        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>-->
+<!--        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hide-medium w3-hover-white">Clients</a>-->
+<!--        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hide-medium w3-hover-white">Partners</a>-->
+<!--    </div>-->
+<!--</div>-->
 
 <!-- Sidebar -->
 <nav class="w3-sidebar w3-bar-block w3-collapse w3-large w3-theme-l5 w3-animate-left" id="mySidebar">
-    <a href="javascript:void(0)" onclick="w3_close()" class="w3-right w3-xlarge w3-padding-large w3-hover-black w3-hide-large" title="Close Menu">
+    <a href="javascript:void(0)" onclick="w3_close()"
+       class="w3-right w3-xlarge w3-padding-large w3-hover-black w3-hide-large" title="Close Menu">
         <i class="fa fa-remove"></i>
     </a>
     <h4 class="w3-bar-item"><b>Menu</b></h4>
+    <a class="w3-bar-item w3-button w3-hover-black" href="/">Startside</a>
     <a class="w3-bar-item w3-button w3-hover-black" href="#">Forbrugere</a>
     <a class="w3-bar-item w3-button w3-hover-black" href="#">Virksomheder</a>
     <a class="w3-bar-item w3-button w3-hover-black" href="#">Organisationer</a>
-    <a class="w3-bar-item w3-button w3-hover-black" href="#">Hvis du vil vide mere</a>
+    <a class="w3-bar-item w3-button w3-hover-black" href="/andet">Hvis du vil vide mere</a>
 </nav>
 
 <!-- Overlay effect when opening sidebar on small screens -->
-<div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+<div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu"
+     id="myOverlay"></div>
 
 <!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
 <div class="w3-main" style="margin-left:250px">
 
     <div class="w3-row w3-padding-64">
         <div class="w3-twothird w3-container">
-            <h1 class="w3-text-teal">Heading</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum
-                dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h1 class="w3-text-teal">Madspild</h1>
+            <p>Hver dag bliver der smidt betydelige mængder mad ud i de danske husholdninger. Men det største madspild
+                sker, inden maden bliver solgt til forbrugerne, dvs. i processen fra produktion til salg.</br></br>
+                Spild af mad har store miljø- og klimamæssige konsekvenser, og det er noget, alle kan være med til at
+                undgå. Vi kan måske ikke rette på det ved at spise al den mad, der ellers ville være blevet smidt ud,
+                men udenlandske undersøgelser peger på, at omkring halvdelen af den mad, der ryger i skraldespanden,
+                kunne være spist.
+
+                Madspild handler ikke kun om, hvad der går til spilde i husholdningerne. Det handler også om spildet i
+                hele kæden, dvs. under dyrkning og produktion, transport, håndtering og indpakning i butikkerne samt
+                tilberedning og servering i restauranterne m.m.</p>
         </div>
         <div class="w3-third w3-container">
-            <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
-            <p class="w3-border w3-padding-large w3-padding-64 w3-center">AD</p>
+            <picture>
+                <img src="../reklame.png" alt="Reklame"
+                     width="350"
+                     height="375">
+            </picture>
         </div>
     </div>
 
     <div class="w3-row">
         <div class="w3-twothird w3-container">
-            <h1 class="w3-text-teal">Heading</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum
-                dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <!--            <h1 class="w3-text-teal">Heading</h1>-->
+            <!--            <p>txt2</p>-->
         </div>
         <div class="w3-third w3-container">
-            <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
-            <p class="w3-border w3-padding-large w3-padding-64 w3-center">AD</p>
+            <picture>
+                <img src="../reklame2.jpg" alt="Reklame"
+                     width="350"
+                     height="375">
+            </picture>
         </div>
     </div>
 
     <div class="w3-row w3-padding-64">
         <div class="w3-twothird w3-container">
-            <h1 class="w3-text-teal">Heading</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum
-                dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <!--        <h1 class="w3-text-teal">Heading</h1>-->
+            <!--        <p>txt3</p>-->
         </div>
         <div class="w3-third w3-container">
-            <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
-            <p class="w3-border w3-padding-large w3-padding-64 w3-center">AD</p>
         </div>
     </div>
 
     <!-- Pagination -->
-    <div class="w3-center w3-padding-32">
-        <div class="w3-bar">
-            <a class="w3-button w3-black" href="#">1</a>
-            <a class="w3-button w3-hover-black" href="#">2</a>
-            <a class="w3-button w3-hover-black" href="#">3</a>
-            <a class="w3-button w3-hover-black" href="#">4</a>
-            <a class="w3-button w3-hover-black" href="#">5</a>
-            <a class="w3-button w3-hover-black" href="#">»</a>
-        </div>
-    </div>
+    <!--    <div class="w3-center w3-padding-32">-->
+    <!--        <div class="w3-bar">-->
+    <!--            <a class="w3-button w3-black" href="#">1</a>-->
+    <!--            <a class="w3-button w3-hover-black" href="#">2</a>-->
+    <!--            <a class="w3-button w3-hover-black" href="#">3</a>-->
+    <!--            <a class="w3-button w3-hover-black" href="#">4</a>-->
+    <!--            <a class="w3-button w3-hover-black" href="#">5</a>-->
+    <!--            <a class="w3-button w3-hover-black" href="#">»</a>-->
+    <!--        </div>-->
+    <!--    </div>-->
 
-    <footer id="myFooter">
-        <div class="w3-container w3-theme-l2 w3-padding-32">
-            <h4>Footer</h4>
+
+    <footer>
+        <head>
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <style>
+                * {
+                    box-sizing: border-box;
+                }
+
+                /* Create three equal columns that floats next to each other */
+                .column {
+                    float: left;
+                    width: 33.33%;
+                    padding: 10px;
+                    height: 200px; /* Should be removed. Only for demonstration */
+                }
+
+                /* Clear floats after the columns */
+                .row:after {
+                    content: "";
+                    display: table;
+                    clear: both;
+                }
+            </style>
+        </head>
+        <body>
+
+        <div class="row">
+            <div class="column" style="background-color:#aaa;">
+                <h2>Column 1</h2>
+                <p>Some text..</p>
+            </div>
+            <div class="column" style="background-color:#aaa;">
+                <h2>Column 2</h2>
+                <p>Some text..</p>
+            </div>
+            <div class="column" style="background-color:#aaa;">
+                <h2>Column 3</h2>
+                <p>Some text..</p>
+            </div>
         </div>
 
-        <div class="w3-container w3-theme-l1">
-            <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-        </div>
+        </body>
     </footer>
+
 
     <!-- END MAIN -->
 </div>
