Foodplaner has been revitalized

--- a/MadSpild-main/Madspild/src/main/resources/templates/organisation.html
+++ b/MadSpild-main/Madspild/src/main/resources/templates/organisation.html
@@ -21,22 +21,6 @@
     }
 </style>
 <body>
-
-<!-- Navbar -->
-<div class="w3-top">
-    <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
-        <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1"
-           href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
-        <a href="#" class="w3-bar-item w3-button w3-theme-l1">Logo</a>
-        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
-        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Values</a>
-        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">News</a>
-        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
-        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hide-medium w3-hover-white">Clients</a>
-        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hide-medium w3-hover-white">Partners</a>
-    </div>
-</div>
-
 <!-- Sidebar -->
 <nav class="w3-sidebar w3-bar-block w3-collapse w3-large w3-theme-l5 w3-animate-left" id="mySidebar">
     <a href="javascript:void(0)" onclick="w3_close()"
@@ -60,38 +44,64 @@
     <div class="w3-row w3-padding-64">
         <div class="w3-twothird w3-container">
             <h1 class="w3-text-teal">Organisation & Madspild</h1>
-            <p>Mange organisationer i dag hjælper til mod madspild. </p>
+            <p>Mange organisationer i dag hjælper til mod madspild. På denne side kan du finde ud hvordan du eller din
+                virksomhed kan hjælpe på madspild, fx. ved at donere mad til nogle af disse organisationer </p>
         </div>
         <div class="w3-third w3-container">
-            <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
-
-            <p class="w3-border w3-padding-large w3-padding-64 w3-center">AD</p>
+            <picture>
+                <img src="../reklame.png" alt="Reklame"
+                     width="350"
+                     height="375">
+            </picture>
         </div>
     </div>
 
     <div class="w3-row">
         <div class="w3-twothird w3-container">
-            <h1 class="w3-text-teal">Hvad kan du gøre for at mindske madspild?</h1>
-            <p>
+            <!--            <h1 class="w3-text-teal">Heading</h1>-->
+            <!--            <p>txt2</p>-->
+        </div>
+        <div class="w3-third w3-container">
+            <picture>
+                <img src="../reklame2.jpg" alt="Reklame"
+                     width="350"
+                     height="375">
+            </picture>
+        </div>
+    </div>
 
+    <div class="w3-row">
+        <div class="w3-twothird w3-container">
+            <h1 class="w3-text-teal">Hvilke organisationer hjælper mod madspild?</h1>
+            <img src="https://www.danchurchaid.org/var/fkn_site/storage/images/media/noedhjaelp.dk/billeder/metabilleder-1200-x-630/vaer-med/wefood/weefood_meta/136216-3-dan-DK/weefood_meta.jpg"
+                 alt="wefood" style="width:1000px;height:300px;">
+            <p>
+                Wefood sælger overskudsvarer, bekæmper madspild og giver overskuddet til mennesker i nød.
+                Overskuddet fra Wefood-butikkerne går til mennesker i nød. Når du fylder indkøbskurven med varer fra
+                Wefood, støtter du samtidig Folkekirkens Nødhjælps klimaarbejde og udviklingsprojekter i lande som
+                Cambodja, Etiopien og Zimbabwe.</p>
+            <p>Når du handler i Wefood, er du med til at reducere madspild. Det mætter sultne munde og støtter nye
+                løsninger i verdens fattigste samfund.</p>
+            <p>
+                Takket være dig, og vores frivillige, har vi reddet flere tusind ton mad og givet milioner af kroner til
+                at hjælpe verdens fattigste.
             </p>
+            <p> Hvis du kunne tænker dig at hjælpe Wefood, så kan du klikke på linket nedenunder:</p>
+            <a href="https://www.noedhjaelp.dk/wefood/wefood-samarbejdspartner">Wefood</a>
+            <br>
+            <img src="https://lf.dk/-/media/lf/aktuelt/nyheder/2016/juni/reefood.jpg"
+                 alt="REFOOD">
+            <p>REFOOD mærket er en ordning for virksomheder og organisationer i fødevare- og servicesektoren, som gør en
+                indsats mod madspild og for genanvendelse. Medlemskab er gratis og kræver, at man vælger tre
+                madspildsreducerende initiativer blandt vores mange gode forslag, samt har en ordning for genanvendelse
+                af madaffald. REFOOD mærket er en tillidsbaseret certificering, som bygger på en fælles vision om en
+                bæredygtig fødevare- og servicesektor, præget af mindre ressourcespild og mere genanvendelse. </p>
+            <p> Hvis du kunne tænker dig at hjælpe REFOOD, så kan du klikke på linket nedenunder:</p>
+            <a href="https://refoodlabel.dk/">REFOOD</a>
         </div>
         <div class="w3-third w3-container">
             <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
             <p class="w3-border w3-padding-large w3-padding-64 w3-center">AD</p>
-        </div>
-    </div>
-
-
-    <!-- Pagination -->
-    <div class="w3-center w3-padding-32">
-        <div class="w3-bar">
-            <a class="w3-button w3-black" href="#">1</a>
-            <a class="w3-button w3-hover-black" href="#">2</a>
-            <a class="w3-button w3-hover-black" href="#">3</a>
-            <a class="w3-button w3-hover-black" href="#">4</a>
-            <a class="w3-button w3-hover-black" href="#">5</a>
-            <a class="w3-button w3-hover-black" href="#">»</a>
         </div>
     </div>
 
